style: 주석 제거
Resolves: #27 구글 소셜